--- a/dataflow/newmappingdataflow1.json
+++ b/dataflow/newmappingdataflow1.json
@@ -14,6 +14,10 @@
 			],
 			"sinks": [
 				{
+					"dataset": {
+						"referenceName": "AzureSqlTable2_Customers_Target",
+						"type": "DatasetReference"
+					},
 					"name": "sink1"
 				}
 			],
@@ -39,13 +43,25 @@
 				"     format: 'table') ~> source1",
 				"source1 filter(City == 'Patna') ~> filter1",
 				"filter1 derive(GST = Amount* 0.18) ~> derivedColumn1",
-				"derivedColumn1 sink(validateSchema: false,",
+				"derivedColumn1 sink(allowSchemaDrift: true,",
+				"     validateSchema: false,",
+				"     input(",
+				"          CustomerId as integer,",
+				"          Name as string,",
+				"          City as string,",
+				"          Amount as decimal(10,2),",
+				"          GST as decimal(10,2),",
+				"          ModifiedDate as date",
+				"     ),",
+				"     deletable:false,",
+				"     insertable:true,",
+				"     updateable:false,",
+				"     upsertable:false,",
+				"     format: 'table',",
 				"     skipDuplicateMapInputs: true,",
 				"     skipDuplicateMapOutputs: true,",
-				"     store: 'cache',",
-				"     format: 'inline',",
-				"     output: true,",
-				"     saveOrder: 1) ~> sink1"
+				"     saveOrder: 1,",
+				"     errorHandlingOption: 'stopOnFirstError') ~> sink1"
 			]
 		}
 	}
